--- a/PickupSports/Views/CommunityPage.xaml
+++ b/PickupSports/Views/CommunityPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PickupSports.Views.CommunityPage"
-             Title="{Binding Title}">
+             xmlns:local ="clr-namespace:PickupSports.ViewModels">
+
+    <ContentPage.BindingContext>
+        <local:CommunityViewModel/>
+    </ContentPage.BindingContext>
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Basketball"/>
@@ -11,48 +15,29 @@
         <ToolbarItem IconImageSource="tab_about.png"/>
     </ContentPage.ToolbarItems>
 
-    <StackLayout Orientation="Horizontal">
-        <Label Text="This will soon be a scrollable feed.... i hope"/>
-    </StackLayout>
-    
-
-
     <!--Posts-->
-    <!--<ListView ItemsSource="{Binding CommunityFeed}" HasUnevenRows="true">
+    <ListView ItemsSource="{Binding postFeed}" HasUnevenRows="true" BackgroundColor="#f0fff0">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell>
-                    <Grid>
+                    <Grid Margin="0,0,0,30">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="70" />
-                            <RowDefinition Height="200" />
-                            <RowDefinition Height="50" />
-                            <RowDefinition Height="20" />
+                            <RowDefinition Height="35" />
+                            <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <StackLayout Orientation="Horizontal" Margin="10,0,10,0" Spacing="5">
                             <Image VerticalOptions="Center" HeightRequest="30" WidthRequest="30" Source="tab_about.png" HorizontalOptions="Center" />
-                            <Label Text="{Binding Name}" VerticalOptions="Center" TextColor="Black" />
+                            <Label Text="{Binding profileNameVal}" VerticalOptions="Center" TextColor="Black" />
                         </StackLayout>
-                        <Image Source="{Binding Image}" Grid.Row="1" Aspect="AspectFill" HeightRequest="150" />
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Grid.Row="2" Margin="10,0,10,0">
-                            <Image Source="tab_about.png" />
-                            <Image Source="tab_about.png" />
-                            <Image Source="tab_about.png" />
-                            <Image Source="tab_about.png" HorizontalOptions="EndAndExpand" />
-                        </StackLayout>
-                        <StackLayout Orientation="Horizontal" Grid.Row="3" Margin="10,0,10,0">
-                            <Image Source="tab_about.png" />
-                            <Label Text="{Binding ViewCount, StringFormat='{0:N0} views'}" FontSize="12" TextColor="Black" />
-                        </StackLayout>
-                        <Label Text="{Binding Comment}" Grid.Row="4" TextColor="Black" Margin="10,0,10,0"/>
-                        <Label Text="{Binding CommentCount, StringFormat='View All {0} comments'}" Grid.Row="5" Margin="10,0,10,0" />
-                        <Label Text="{Binding PostedAt}" Grid.Row="6" Margin="10,0,10,0" />
+                        <Image Source="{Binding imageSourceVal}" Grid.Row="1" Aspect="AspectFill" />
+                        <Label Text="{Binding commentVal}" Grid.Row="2" TextColor="Black" Margin="10,0,10,0"/>
+                        <Label Text="{Binding postDateVal}" Grid.Row="3" Margin="10,0,10,0" />
                     </Grid>
                 </ViewCell>
             </DataTemplate>
         </ListView.ItemTemplate>
-    </ListView>-->
+    </ListView>
 </ContentPage>
